# ecs_bench_suite

./: .gitignore  Cargo.toml  readme.md
benches/: benchmarks.rs
src/: constants.rs  lib.rs
src/bevy/: add_remove.rs  frag_iter.rs  heavy_compute.rs  parallel_light_compute.rs  schedule.rs  simple_insert.rs  simple_iter.rs
src/edict/: add_remove.rs  frag_iter.rs  simple_insert.rs  simple_iter.rs
src/hecs/: add_remove.rs  frag_iter.rs  heavy_compute.rs  mod.rs  parallel_light_compute.rs  serialize_binary.rs  serialize_text.rs  simple_insert.rs  simple_iter.rs
src/legion/: add_remove.rs  frag_iter.rs  heavy_compute.rs  parallel_light_compute.rs  schedule.rs  serialize_binary.rs  serialize_text.rs  simple_insert.rs  simple_iter.rs
src/legion_packed/: heavy_compute.rs  parallel_light_compute.rs  schedule.rs  simple_iter.rs
src/planck_ecs/: add_remove.rs  frag_iter.rs  schedule.rs  simple_insert.rs  simple_iter.rs
src/shipyard/: add_remove.rs  frag_iter.rs  heavy_compute.rs  parallel_light_compute.rs  schedule.rs  simple_insert.rs  simple_iter.rs
src/shipyard_git/: add_remove.rs  frag_iter.rs  heavy_compute.rs  parallel_light_compute.rs  schedule.rs  simple_insert.rs  simple_iter.rs
src/sparsey/: add_remove.rs  frag_iter.rs  schedule.rs  simple_insert.rs  simple_iter.rs
src/sparsey_packed/: schedule.rs  simple_iter.rs
src/specs/: add_remove.rs  frag_iter.rs  heavy_compute.rs  parallel_light_compute.rs  schedule.rs  simple_insert.rs  simple_iter.rs
