[package]
authors = [
  "Thomas Gillen <thomas.gillen@googlemail.com>",
  "Tudor Lechintan <lechintantudor02@gmail.com>",
]
edition = "2021"
name = "ecs_bench_suite"
version = "0.2.0"

[dependencies]
bevy_ecs = "0.6.0"
bevy_tasks = "0.6.0"
bincode = "1.3.3"
cgmath = {version = "0.18.0", features = ["serde"]}
edict = "0.0.4"
hecs = {version = "0.7.5", features = ["column-serialize", "row-serialize"]}
legion = "0.4.0"
planck_ecs = {version = "1.2.1", features = ["parallel"]}
rayon = "1.5.1"
ron = "0.7.0"
serde = {version = "1.0.135", features = ["derive"]}
shipyard-git = {git = "https://github.com/leudz/shipyard", package = "shipyard", features = ["parallel", "proc", "std"]}
shipyard-stable = {package = "shipyard", version = "0.5.0"}
sparsey = "0.6.0"
specs = {version = "0.17.0", features = ["serde"]}
specs-derive = "0.4.1"

[dev-dependencies]
criterion = {version = "0.3.5", features = ["stable", "html_reports", "cargo_bench_support"]}
rayon = "1.5.1"

[[bench]]
harness = false
name = "benchmarks"
